[package]
name = "wasm-brownbag"
version = "0.1.0"
authors = ["Sebastian Berglönn <sebastianberglonn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
debug = true

[dependencies]
wasm-bindgen-futures = "0.4.18"
wasm-bindgen = { version = "0.2.68", features = ["serde-serialize"]  }
web-sys = "0.3.45"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0.101", features = ["derive"] }
serde_derive = "^1.0.59"
serde_json = "1.0.59"
